# pyrecipes

./: LICENSE  README.md  setup.cfg
info/: notes.txt  spec.txt
recipes/: example.rec
scripts/: parser
src/parser/: action_parser.py  cooking_types.py  main.py  templates.py
