[metadata]
name = pyrecipes
version = 0.1.0
author = Michael S. Miller
author_email = michaelsmiller2@gmail.com
description = A simple recipe data format and parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelsmiller/pyrecipes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  typing_extensions
  mypy
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
